# mpu6050_imu

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: mpu6050_params.yaml
launch/: mpu6050_launch.py
mpu6050_imu/: __init__.py  mpu6050_driver.py
nodes/: mpu6050_node.py
test/: test_mpu6050_node.py
